fixed z-index issues with nav slideout

--- a/styles/sass/partials/blog/_main.scss
+++ b/styles/sass/partials/blog/_main.scss
@@ -1,4 +1,4 @@
-.blog {
+main.blog {
     section {
         padding: 50px 0;
     }
@@ -26,8 +26,6 @@
             img {
                 border-radius: 50%;
             }
-    
-    
     
             .contentContainer {
                 @include flexRow;
