--- a/styles/sass/partials/global/_nav.scss
+++ b/styles/sass/partials/global/_nav.scss
@@ -1,11 +1,15 @@
 nav {
+    &.contact {
+        position: relative;
+    }
+
     &.index, &.blog {
         position: absolute;
     }
     
     width: 100%;
     text-transform: uppercase;
-    z-index: 10;
+    z-index: 30;
 
     label {
         @include flexCol;
@@ -60,7 +64,7 @@ nav {
     .slideoutMenu {
         position: fixed;
         top: 0;
-        left: -250px;
+        left: -320px;
         z-index: 20;
 
         transition: left 0.5s;
@@ -68,7 +72,7 @@ nav {
         background-color: $offWhite;
 
         height: 100vh;
-        width: 250px;
+        width: 320px;
         border-right: 2px solid $offBlack;
         padding-top: calc(1vh + 20px);
         padding-left: calc(1vh + 20px);
@@ -128,14 +132,6 @@ nav {
     }
 
     // Standard Nav Bar Styling
-    .wrapper {
-        // position: relative;
-        // top: 0;
-        // @include breakpointStyling(medium) {
-        //     top: -50px;
-        // }
-    }
-
     .wrapper, ul {
         @include flexRow;
         justify-content: space-between;
